fix bug on mobile menu

--- a/app/assets/stylesheets/styles/skateparks/index.scss
+++ b/app/assets/stylesheets/styles/skateparks/index.scss
@@ -56,7 +56,6 @@
         align-items: center;
 
         .state-image {
-          background-color: $blue;
           height: 85px;
           padding: 0;
 
